--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-, ujtngd
+<html>
+  <head><title>strawberry.github.io </title></head>
+
+  <body>
+    <pre>
+    Intel Core i9-10900K 10-Core 3.7 GHz LGA 1200 125W BX8070110900K Desktop Processor Intel UHD Graphics 630 $469.99
+    GIGABYTE B460M DS3H LGA 1200 Intel B460 Micro-ATX Motherboard with M.2, SATA 6Gb/s, USB 3.2 Gen 1 $99.99
+    G.SKILL Aegis 8GB 288-Pin DDR4 SDRAM DDR4 2400 (PC4 19200) Intel Z170 Platform / Intel X99 Platform Desktop Memory Model F4-2400C15S-8GIS $39.99 x 8 $319.92
+    EVGA GeForce GT 1030 SC, 02G-P4-6332-KR, 2GB GDDR5, Passive, Low Profile $269.00
+    Thermaltake Toughpower GF1 850W 80+ Gold SLI/Crossfire Ready Ultra Quiet 140mm Hydraulic Bearing Smart Zero Fan Full Modular Power Supply 10 Year Warranty - PS-TPD-0850FNFAGU-1 $158.13
+    Intel 660p Series M.2 2280 1TB PCIe NVMe 3.0 x4 3D2, QLC Internal Solid State Drive (SSD) SSDPEKNW010T8X1 $99.99 x 8 $299.97
+    Thermaltake Contac Silent 12 150W INTEL/AMD with AM4 Support 120mm PWM CPU Cooler CL-P039-AL12BL-A $31.99
+    Microsoft Windows 10 Pro - Full Retail Version 32 & 64-Bit (Download) $199.00
+    DIYPC DIY-A1-BK Black Tempered Glass USB 3.0 ATX Mid Tower Computer Case with 1 x 120mm Fan x Rear Pre-installed $38.94
+    CORSAIR TM30 Performance Thermal Paste, CT-9010001-WW. $7.99
+    </pre>
+  </body>
+  </html>
