--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <pre>
     
     <hr />
-    <a href= "Netcalculator.hmtl"> Network Calculator </a>
+    <a href= "Netcalculator.html"> Network Calculator </a>
     Intel Core i9-10900K 10-Core 3.7 GHz LGA 1200 125W BX8070110900K Desktop Processor Intel UHD Graphics 630 $469.99
     GIGABYTE B460M DS3H LGA 1200 Intel B460 Micro-ATX Motherboard with M.2, SATA 6Gb/s, USB 3.2 Gen 1 $99.99
     G.SKILL Aegis 8GB 288-Pin DDR4 SDRAM DDR4 2400 (PC4 19200) Intel Z170 Platform / Intel X99 Platform Desktop Memory Model F4-2400C15S-8GIS $39.99 x 8 $319.92
